# Rustygit-tree

./: .prettierrc  eslint.config.js  name ideas.txt  package-lock.json  package.json
src/: App.tsx  Modal.tsx  RepoView.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
